syntax="proto3";
option java_package = "rs.lab.rpcdemo.protobuf";

import "CustomerOrder.proto";

message Stock {
    CustomerOrder Order = 1;
    string Type = 2;
}

service Stocks {
    rpc NewPayment (NewPaymentRequest) returns (NewPaymentResponse);
}

message NewPaymentRequest {
    CustomerOrder Order = 1;
}

message NewPaymentResponse {
    bool Success = 1;
    string Error = 2;
}
